--- a/package.json
+++ b/package.json
@@ -3,15 +3,35 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon server.js",
+    "knex": "knex"
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
+    "bcrypt-as-promised": "^1.1.0",
+    "body-parser": "^1.15.2",
+    "boom": "^4.2.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
-    "express": "~4.14.0",
-    "morgan": "~1.7.0",
+    "express": "^4.14.0",
+    "humps": "^2.0.0",
+    "knex": "^0.12.6",
+    "mongoose": "^4.6.7",
+    "morgan": "^1.7.0",
+    "pg": "^6.1.0",
     "serve-favicon": "~2.3.0"
-  }
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mikey084/VR_Hub.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mikey084/VR_Hub/issues"
+  },
+  "homepage": "https://github.com/mikey084/VR_Hub#readme",
+  "description": ""
 }
