--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "body-parser": "^1.15.2",
     "boom": "^4.2.0",
     "cookie-parser": "~1.4.3",
+    "cookie-session": "^2.0.0-alpha.2",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "humps": "^2.0.0",
     "knex": "^0.12.6",
     "mongoose": "^4.6.7",
@@ -22,7 +24,9 @@
     "serve-favicon": "~2.3.0"
   },
   "main": "app.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "dotenv": "^2.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mikey084/VR_Hub.git"
